Revert "Add style.css"
This reverts commit aad1cf1efd1554fb8868d4782e819e303b7b383f.

--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less",
-              "src/style.css"
+              "src/styles.less"
             ],
             "scripts": []
           },
@@ -91,8 +90,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less",
-              "src/style.css"
+              "src/styles.less"
             ],
             "scripts": []
           }
